[package]
name = "bus"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.44.2", features = ["full"] }
futures = "0.3.31"

redis = { version = "0.24", features = ["tokio-comp"] }

chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = [
    "env-filter",
    "fmt",
    "json",
] }
tracing-appender = "0.2.3"

clap = { version = "4.4", features = ["derive"] }

serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
async-trait = "0.1"

regex = "1.11.1"
dotenvy = "0.15.7"
serde_json = "1.0.141"
